--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>webpack-setup</title>
+    <title>weather-app</title>
   </head>
   <body>
-    <h1>webpack-setup</h1>
+    <h1>weather-setup</h1>
   </body>
 </html>
