--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
     <title>weather-app</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>weather-setup</h1>
+  <body class="grid grid-cols-9 grid-rows-8 bg-black">
+    <nav class="flex items-center gap-96 bg-gray-800 rounded-lg m-2">
+      <div class="w-1/2 mb-4 mt-3 ml-6 text-sm">
+        <input
+          class="search w-full h-full bg-indigo-500 text-slate-50 font-bold p-4 rounded-xl border border-gray-500 focus:border-indigo-500 outline-none focus:w-4/5"
+          type="text"
+          placeholder="Search Location"
+        />
+      </div>
+
+      <button
+        class="unit font-semibold bg-blue-600 w-16 h-8 text-green-400 rounded-md hover:bg-green-600 hover:text-blue-800"
+      >
+        °C/°F
+      </button>
+    </nav>
+    <aside class="bg-gray-800 rounded-lg m-2"></aside>
+    <main class="grid grid-rows-7 gap-1.5 grid-cols-8 rounded-lg m-2">
+      <div class="location flex items-center gap-2 text-white text-3xl"></div>
+      <div class="flex gap-12 items-center details bg-gray-400 rounded-xl">
+        <div class="w-48">
+          <img alt="" class="logo h-full w-full" />
+        </div>
+        <div class="flex content-center gap-14 items-center h-full w-96">
+          <p class="temp text-black font-medium text-4xl"></p>
+          <div class="h-full w-60 flex flex-col justify-center gap-7">
+            <p class="conditions text-black font-medium text-2xl"></p>
+            <p class="feelsLike text-black font-light text-2xl"></p>
+          </div>
+        </div>
+      </div>
+      <p class="description text-white ml-7 font-bold"></p>
+      <div class="sorrDet grid grid-cols-4 bg-gray-400 rounded-xl ml-3">
+        <div class="flex flex-col justify-evenly ml-8">
+          <span class="font-semibold text-xl">Wind</span>
+          <p class="wind"></p>
+        </div>
+        <div class="flex flex-col justify-evenly ml-8">
+          <span class="font-semibold text-xl">Humidity</span>
+          <p class="humidity"></p>
+        </div>
+        <div class="flex flex-col justify-evenly ml-8">
+          <span class="font-semibold text-xl">Visibility</span>
+          <p class="visibility"></p>
+        </div>
+        <div class="flex flex-col justify-evenly ml-8">
+          <span class="font-semibold text-xl">Pressure</span>
+          <p class="pressure"></p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
