--- a/src/template.html
+++ b/src/template.html
@@ -47,6 +47,8 @@
           </div>
         </div>
       </div>
+      <div class="loader" id="loader"></div>
+
       <p class="description text-white ml-7 font-bold"></p>
       <div class="sorrDet grid grid-cols-4 bg-gray-400 rounded-xl ml-3">
         <div class="flex flex-col justify-evenly ml-8">
